--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "git-publish": "ng build -c --output-path docs --base-href /frontend-examples/ && git add . && git commit -m publish && git push",
+    "iphone":"ionic  capacitor run ios --external --livereload   --watch     --open"
+
   },
   "private": true,
   "dependencies": {
@@ -28,6 +31,7 @@
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
     "ionicons": "^7.0.0",
+    "object-detection-from-yolo-to-tensorflow": "^1.3.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
