--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "git-publish": "ng build -c --output-path docs --base-href /frontend-examples/ && git add . && git commit -m publish && git push",
+    "git-publish": "ng build -c --output-path docs --base-href /mask-detector/ && git add . && git commit -m publish && git push",
     "iphone":"ionic  capacitor run ios --external --livereload   --watch     --open"
 
   },
