--- a/src/assets/mask_detector/metadata.yaml
+++ b/src/assets/mask_detector/metadata.yaml
@@ -1,7 +1,7 @@
 description: Ultralytics best model trained on ./config.yaml
 author: Ultralytics
 license: AGPL-3.0 https://ultralytics.com/license
-date: '2023-08-15T07:36:38.843539'
+date: '2023-08-19T16:39:00.804493'
 version: 8.0.154
 stride: 32
 task: detect
@@ -10,6 +10,6 @@ imgsz:
 - 224
 - 224
 names:
-  0: Without_Mask
-  1: With_Mask
-  2: Mask_Weared_Incorrect
+  0: with_mask
+  1: mask_weared_incorrect
+  2: without_mask
